@@ -4,7 +4,7 @@ New features, changes and fixes in gnuplot version 4.2.3
 * NEW options front and back to "set colorbox"
 * FIX minitics in log scale
 * FIX tweak installation scripts for OSX, nt
-* FIX minor bugfixes to terminals fig, emf, post, svg
+* FIX minor bugfixes to terminals fig, emf, post, svg, x11
 * FIX infinite loop from x11 plot window resizing under ion, fluxbox
 * FIX never estimate zero size for a non-empty string
 * CHANGE Remove limitation of 10 args max to internal function sprintf()
